the pageAction popup's start/stop buttons now start/stop refreshing behavior

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -12,10 +12,11 @@
   <p>Watch for changes in this file or directory:</p>
   <input id=path>
   <div id=buttons>
-    <button id=start>Start</button>
-    <button id=stop>Stop</button>
+    <button disabled id=start>Start</button>
+    <button disabled id=stop>Stop</button>
   </div>
   <div class=clearfix></div>
+  <div id=status></div>
 </body>
 
 </html>
