Add continuous ping test feedback to popup
Now, for example, if the user got the bad connection message and fixed it while
the popup was still open, they'd see a 'connection fixed' message.

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -19,9 +19,12 @@
 
   <div id=connection-error style="display: none;">
     <hr>
-    <ol id=log>
-      <li class='error'>Refreshing cannot connect to the watch server. Are you sure it&rsquo;s running?</li>
-    </ol>
+    <p><span class=bad>Connection error:</span> Refreshing cannot connect to the watch server. Are you sure it is running?</li>
+  </div>
+
+  <div id=connection-fixed style="display: none;">
+    <hr>
+    <p><span class=good>Connection fixed:</span> Refreshing is now connected to the watch server.</li>
   </div>
 </body>
 
