--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -19,12 +19,12 @@
 
   <div id=connection-error style="display: none;">
     <hr>
-    <p><span class=bad>Connection error:</span> Refreshing cannot connect to the watch server. Are you sure it is running?</li>
+    <p><span class=bad>Connection error:</span> Refreshing cannot connect to the watch server. Is it running?</p>
   </div>
 
   <div id=connection-fixed style="display: none;">
     <hr>
-    <p><span class=good>Connection fixed:</span> Refreshing is now connected to the watch server.</li>
+    <p><span class=good>Connection fixed:</span> Refreshing is now connected to the watch server.</p>
   </div>
 </body>
 
