improve pathname guessing
This refers to the pathname guessing in the popup.

Before, just stripped off the first seven characters. This worked specifically
for URLs prefixed with 'file://'. Now we use generic pathname extraction that
works on all URL types (using the DOM's url parsing).

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -4,13 +4,14 @@
 <head>
   <title>Configure refreshing</title>
   <link rel=stylesheet href=popup.css>
+  <script src=util.js></script>
   <script src=popup.js></script>
 </head>
 
 <body>
   <h1>Refreshing</h1>
   <p>Watch for changes in this file or directory:</p>
-  <input id=path>
+  <input id=path required>
   <div id=buttons>
     <button disabled id=start>Start</button>
     <button disabled id=stop>Stop</button>
